Call windows scripts